terraform/infrastructure/jenkins/jenkins-service.yaml
# -----------------------------------------------------------------------------
# Jenkins Service
#
# Purpose:
# Exposes the Jenkins controller within the Kubernetes cluster.
#
# The NodePort Service provides access to Jenkins from the AWS Load Balancer
# configured by the Jenkins Ingress.
# -----------------------------------------------------------------------------

apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
spec:
  type: NodePort

  selector:
    app: jenkins

  ports:
  - port: 8080
    targetPort: 8080
